# Socio-Inteligente

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ACTION_PLAN.md  ACTUALIZACION-FINAL-REPORTES.md  ARCHIVOS-CREADOS-MODIFICADOS.txt  ARQUITECTURA_BD.txt  AUDITORIA_TECNICA.json  AUDIT_FASTAPI_NEXTJS.json  AUDIT_SUMMARY.md  CARTA-DE-CONTROL-EJEMPLO.md  CHECKLIST-VERIFICACION.txt  CHECKLIST_DB.md  CODE_EXAMPLES.md  DATABASE_SETUP.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STEPS.md  DEPLOYMENT_VERCEL_RAILWAY.md  DEPLOY_INTERACTIVE.md  Dockerfile  ESTADO_ACTUAL.txt  FASE_8_9_VALIDATION.md  FIXES_COMPLETADOS_RESUMEN.md  FIX_DATABASE_URL.md  FLUJO-PAPELES-OBSERVACIONES.txt  IMPLEMENTACION-COMPLETADA.md  IMPLEMENTACION-PAPELES-OBSERVACIONES.md  IMPLEMENTATION_SUMMARY.md  INDICE-GENERADO-SESION-2.txt  INICIO-RAPIDO-TESTING.txt  INSTALLATION_GUIDE.md  MATERIALIDAD_RESUMEN.md  PAPELES_TRABAJO_V2_GUIDE.md  PHASE_5_6_7_SUMMARY.txt  PRE_DEPLOYMENT_CHECKLIST.md  PRUEBA-PAPELES-TRABAJO-V2.txt  QUICK_START.md  RATE_LIMITING_IMPLEMENTATION.md  README-INICIO-RAPIDO.txt  (+38 more)
.claude/: settings.local.json
.streamlit/: config.toml  secrets.toml.example
analysis/: agrupacion_ls.py  benchmark.py  expert_flags.py  lector_mayor.py  lector_tb.py  ranking_areas.py  ranking_cuentas.py  ratios.py  tendencias.py  variaciones.py
app/: app_streamlit.py  app_streamlit.py.bak_corrupt  cli_commands.py  socio_ai.py
backend/: README.md  auth.py  main.py  openapi.json  run_migrations.py  schemas.py
core/: configuracion.py  constants.py  exceptions.py  logger.py  paths.py
(+730 files in other folders)
